syntax = "proto3";

package imagegen;

message Link {
  string url = 1;
  string title = 2;
  string source = 3;
}

message AcceptFoundLinksRequest {
  string questionId = 1;
  repeated Link links = 2;
  string origin = 3; // optional, например "image-links"
}

message Ack {
  bool ok = 1;
  string message = 2;
}

service Generator {
  rpc AcceptFoundLinks (AcceptFoundLinksRequest) returns (Ack);
}
